<resources>
    <string name="app_name">PayShareApp</string>
    <string name="toolbar"></string>
    <string name="frase1_home">Compartilhe seus pagamentos</string>
    <string name="frase2_home">Crie sua lobby, convide seus amigos. É fácil, rápido e seguro.</string>
    <string name="cadastro">Cadastre-se</string>
    <string name="login">Login</string>
    <string name="entrar_google">Entrar com a conta Google</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="esqueci_senha">Esqueci minha senha</string>
    <string name="sem_cadastro">Ainda não possui cadastro?</string>
    <string name="clique_aqui">Clique aqui</string>
    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="confirmar_senha">Confirme sua senha</string>
    <string name="carteira">Carteira</string>
    <string name="adicionar_dinheiro">Adicionar dinheiro na carteira</string>
    <string name="adicionar_pagamento">Adicionar Cartão</string>
    <string name="saldo_carteira">200,00</string>
    <string name="forma_pagamento">Forma de pagamento</string>
    <string name="carta_avisos">Use o dinheiro da sua conta para realizar pagamentos compartilhado</string>
    <string name="nome_user">-</string>
    <string name="telefone_user">(11)94678-0989</string>
    <string name="email_user">payshare@gmail.com</string>
    <string name="li_e_concordo_com_os_termos_de_uso">Li e concordo com os termos de uso</string>
    <string name="mantenha_me_conectado">Mantenha-me conectado</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_card_sala_pagamento">activity_card_sala_pagamento</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="compartilhar_amigos">Compartilhar com amigos</string>
    <string name="criar_lobby">Criar Lobby</string>
    <string name="ainda_n_o_possui_cadastro">Ainda não possui cadastro?</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="adicionar_dinheiro_desc">Adicionar Dinheiro</string>
    <string name="realize_transfer_ncias_de_valores_para_qualquer_conta_payshare_desc">Realize transferências de valores para qualquer conta payshare.</string>
    <string name="title_activity_extrato_modelo">ExtratoModelo</string>
    <string name="adicionar_forma_de_pagamento">Adicionar Cartão</string>
    <string name="entrar_lobby">Participe de uma sala de pagamento</string>
</resources>
