<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:background="@color/preto_payshare"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:layout_marginTop="100dp"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/payshare" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/scv_Login"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_logo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/image_logo">


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="18dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintBottom_toTopOf="@id/edit_text_senha" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_senha"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="18dp"
                android:hint="@string/senha"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintBottom_toTopOf="@id/btn_entrar" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_entrar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/bg_button_normal"
                android:onClick="entrar"
                android:text="Entrar"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:text="Mantenha-me conectado"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@+id/btn_entrar" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scv_Login"

        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_esqueci_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/esqueci_senha"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_sem_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textAlignment="center"
            android:text="@string/ainda_n_o_possui_cadastro"
            android:textColor="@color/white"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/tv_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="viewCadastro"
            android:text="@string/clique_aqui"
            android:textAlignment="center"
            android:textColor="@color/verde_payshare"
            android:textSize="16sp"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>