<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/preto_payshare"
    tools:context=".PerfilFragment">

    <TextView
        android:id="@+id/page_dados_cadastrais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:text="Seus dados cadastrais"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/box_dados"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/scrow_view"
        app:layout_constraintTop_toTopOf="@id/page_dados_cadastrais">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginBottom="3372dp"
                android:text="Nome"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/txt_dado_nome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="5dp"
                android:text="@string/nome_user"
                android:textColor="@color/verde_payshare"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_nome" />

            <TextView
                android:id="@+id/telefone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="10dp"
                android:text="Telefone Pessoal"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_dado_nome" />

            <TextView
                android:id="@+id/txt_dado_telefone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="10dp"
                android:text="@string/telefone_user"
                android:textColor="@color/verde_payshare"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/telefone" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="10dp"
                android:text="Email Cadastrado"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_dado_telefone" />

            <TextView
                android:id="@+id/txt_dado_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="10dp"
                android:text="@string/email_user"
                android:textColor="@color/verde_payshare"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_atualizar"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:background="@color/preto_payshare"
        android:text="Atualizar"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/box_dados"/>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <Button
            android:layout_width="150dp"
            android:layout_height="25dp"
            android:layout_alignParentTop="false"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_button_clear_red"
            android:text="Sair"
            android:textColor="@android:color/darker_gray" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
